New final_comment_proj_ver1_by_clean_all, final_comment_proj_ver1_by_timing

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@
 /myapp/node_modules
 /test/node_modules
 /*.m4a
+/final_test/node_modules
+/final_comment_proj_ver1_by_clean_all/node_modules
+/final_comment_proj_ver1_by_timing_GOODWAY/node_modules
